engine-net-2/examples/Errors/MatchClassErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	{{ [?[t]\<class mcc>] }}
}
